style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
/* TODO: 보기 좋은 나만의 아고라 스테이츠를 위해서 CSS를 수정하세요. */
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    /* font-family: godoM; */
    font-family: 'hyundai', 'Noto Sans KR', "Lucida Grande", Tahoma, Sans-Serif;
    word-break: keep-all;
    /* font-size: 1em; */
    /* font-family: 'Noto Sans KR', sans-serif; */
    /* font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
    /* font-size: 1em; */
    /* background-color: rgb(42, 40, 40); */
}

/*new font*/

@font-face {
    /* font-family: 'fontYouandiModernTR'; */
    src:url('../fonts/fontYouandiModernTR.woff') format('woff'),
          url('../fonts/fontYouandiModernTR.woff2') format('woff2'),
          url('../fonts/fontYouandiModernTR.svg#fontYouandiModernTR') format('svg'),
          url('../fonts/fontYouandiModernTR.eot'),
          url('../fonts/fontYouandiModernTR.eot?#iefix') format('embedded-opentype'),
          url('../fonts/fontYouandiModernTR.ttf') format('truetype');
    font-family : "hyundai";
    font-weight: normal;
    font-style: normal;
    font-display: swap;

  }

  #hyundai_font{
    font-family : "hyundai";
   }
/* @font-face{
    src:url("../fonts/fontYouandiModernTR.ttf");
    font-family : "hyundai";
   }
   #hyundai_font{
    font-family : "hyundai";
   } */


h1 {
    font-size: 3em;
}

h1, h2 {
    /* word-wrap: break-word; */
    word-break: break-all;
    line-height: 1.5;

}

h3 {
    font-size: 1.15em;
    font-weight: bold;
}

ul, li {
    list-style-type: none;
}

a, a:focus, a:active {
    text-decoration: none;
    color: inherit;
}

a:hover {
    color: darkblue;
}

body {
    display: flex;
    justify-content: center;
}

main {
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 100vw;
    justify-content: flex-start;
    align-items: center;
}

.nav__container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 100%;
    background: black;
}

.top__nav {
    display:flex;
    flex-direction: row;
    /* width: 100%; */
    flex-basis: 70%;
    margin: 30px 0 20px 0;

}

.top__nav h1 {
    display: flex;
    /* margin: 30px 0 20px 60px; */
    font-size: 1.5em;
    /* width: 80%; */
    /* align-self: flex-start; */
    /* flex-basis: 80%; */
    flex-grow: 1;
    color: white;
}

.form__container {
    /* display: flex; */
    display: none;
    position: fixed;
    flex-direction: column;
    /* justify-content: center; */
    /* flex-basis: auto; */
    /* flex-grow: auto; */
    align-items: center;
    /* border: 1px solid rgb(38, 34, 34); */
    /* margin: 10px; */
    width: 100%;
    height: 100%;
    background: rgba(48, 47, 47, 0.75);
    z-index: 1;
}

.form{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 30%;
    margin-top: 300px;
    /* height: 50%; */
    /* border: 1px solid lightgray; */
    padding: 20px 30px;
    /* flex-basis: 70%; */
    /* width: 50%; */
    border-radius: 20px;

    background: white;
    border: 1px solid black;
    /*
    background: #2bc0e4;
    background: -webkit-linear-gradient(to right, #EAECC6, #2BC0E4);
    background: linear-gradient(to right, #EAECC6, #2BC0E4);
    */
    /*
  background: #c6ffdd;
  background: -webkit-linear-gradient(to right, #c6ffdd, #fbd786, #f7797d);
  background: linear-gradient(to right, #c6ffdd, #fbd786, #f7797d);
    */
}

.form > div{
    width: 100%;
    /* flex-basis: 50%; */
}

.form__input--wrapper{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    /* padding: 20px; */
    /* flex-basis: 50%; */
}

.form__input--wrapper > div{
    display: flex;
    flex-direction: column;
    /* justify-content: ; */
    /* flex-basis: 20% */
    padding: 10px 0;
}

.form__input--wrapper div label{
    display: flex;
    flex-basis: 1em;
    flex-grow: 1;
    margin-bottom: 10px;
    color: darkslategray;
}

.form__input--wrapper div input,
.form__input--wrapper div textarea{
    display: flex;
    border: none;
    resize: none;
    font-size: 1em;
    /* flex-grow: 3; */
    /* flex-basis: 2em; */
    /* flex-basis: 30%; */
}

#name:focus, #title:focus, #story:focus {
    outline: none;
}


.form__input--wrapper div input{
    height: 2em;
    border-bottom: 1px solid gray;

}

#name {
    width: 40%;
}

#story::placeholder {
    color: lightgray;
}

.form__input--wrapper div textarea{
    height: 15vw;
    padding: 10px 0;
    overflow: auto;
    /* outline: none; */
}

.form__submit{
    display: flex;
    justify-content: flex-end;
    padding: 10px 0 0 0;
    width: 100%;
    height: 100%;
    border-top: 1px solid gray;
    /* padding-right: 30px; */
}

.form__submit > input {
    width: 20%;
    height: 3em;
    border-radius: 20px;
    background-color: darkcyan;
    color: white;
    font-size: 0.8em;
    border: none;
    /* height: 100%; */
}

#submit:disabled {
    width: 20%;
    height: 3em;
    border-radius: 20px;
    background-color: lightgray;
    color: white;
    font-size: 0.8em;
    border: none;
}


.discussion--threads__container{
    display: flex;
    flex-direction: column;
    /* max-width: 90%; */
    flex-basis: 100%;
    /* flex-shrink: 1; */
    width: 70%;
    justify-content: center;
    margin: 20px 0;
    align-items: center;
    /* align-items: center; */
}

.discussion__nav{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    padding: 0 10px 20px 0;
    align-items: stretch;
    flex-basis: 100%;
}

.discussion__nav > input {
    color: darkgray;
}

#search-area{
    display: flex;
    flex-basis: 60%;
    /* flex-grow: 2; */
    /* border: 0.5px solid lightgray; */
    border-radius: 20px;
    outline: none;
    background-color: #f7f7f8;
    border-style: solid;
    border-width: 1px;
    border-color: #dee0e1;
    border-top-color: rgb(222, 224, 225);
    border-right-color: rgb(222, 224, 225);
    border-bottom-color: rgb(222, 224, 225);
    border-left-color: rgb(222, 224, 225);
    font-size: 1em;
    padding: 0 20px;
}



*:focus::placeholder { opacity: 0; }
/*
.discussion__nav > input:focus::placeholder {
    opacity: 1; transition: opacity .5s;
}
::placeholder { opacity: 1; transition: opacity .5s; }

input:focus::-webkit-input-placeholder {
    color: transparent;
}

#searchArea:focus::placeholder{
    color: transparent;
}
#searchArea::placeholder{
    color: lightgray;
    font-size: 3em;
} */


/* Dropdown */

.dropdown {
    display: inline-block;
    position: relative;
  }

  .dd-button {
    display: inline-block;
    border: 1px solid lightgray;
    border-radius: 20px;
    padding: 10px 40px 10px 30px;
    background-color: #FAF9F6;
    cursor: pointer;
    white-space: nowrap;
  }

  .dd-button:after {
    content: '';
    position: absolute;
    top: 50%;
    right: 15px;
    transform: translateY(-50%);
    width: 0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid black;
  }

  .dd-button:hover {
    background-color: #eeeeee;
  }


  .dd-input {
    display: none;
  }

  .dd-menu {
    position: absolute;
    top: 100%;
    border: 1px solid #ccc;
    border-radius: 10px;
    padding: 0;
    margin: 2px 0 0 0;
    box-shadow: 0 0 6px 0 rgba(0,0,0,0.1);
    background-color: #ffffff;
    list-style-type: none;
  }

  .dd-input + .dd-menu {
    display: none;
  }

  .dd-input:checked + .dd-menu {
    display: block;
  }

  .dd-menu li {
    padding: 10px 20px;
    cursor: pointer;
    white-space: nowrap;
  }

  .dd-menu li:hover {
    background-color: #f6f6f6;
  }

  .dd-menu li a {
    display: block;
    margin: -10px -20px;
    padding: 10px 20px;
  }

  .dd-menu li.divider{
    padding: 0;
    border-bottom: 1px solid #cccccc;
  }

  /*ask button*/

#ask-btn{
    /* all: unset; */
    display: flex;
    justify-content: center;
    flex-basis: 15%;
    /* flex-grow: 1; */
    /* width: 15%; */
    height: 2.5em;
    border-radius: 20px;
    background-color: #b92b27;
    color: white;
    font-size: 0.9em;
    border: none;
}

.discussion__wrapper {
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: 100%;
    /* flex-basis: 50%; */
    /* flex-basis: 10em; */
    flex-grow: 3;
    padding-top: 5px;
    /* padding: 0 20px; */
    /* background-color: #F7F5EB; */
}

.discussions__notices{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    flex-basis: 20%;
    flex-grow: 1;
    /* padding: 10px 20px; */
    /* align-self: center; */
}

ul.notice__container {
    /* display: flex; */
    width: 90%;
}



ul.notice__container > .discussion__container2 {

    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 100%;
    padding: 10px;
    /* border-radius: 10px; */
    margin: 1px;
    /* align-items: flex-start; */
    border: 1px solid lightgray;
    border-radius: 10px;
    margin: 10px 0;
    background-color: #FFDEAD;
    color: white;
    background: #000000;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #434343, #433e4f);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #434343, #292828); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

/*
  background: #c6ffdd;
  background: -webkit-linear-gradient(to right, #c6ffdd, #fbd786, #f7797d);
  background: linear-gradient(to right, #c6ffdd, #fbd786, #f7797d); */

    /* background: #2bc0e4;
    background: -webkit-linear-gradient(to right, #EAECC6, #2BC0E4);
    background: linear-gradient(to right, #EAECC6, #2BC0E4); */

}

ul.discussions__container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-basis: 60%;
    flex-grow: 1;
    /* align-content: center; */
    /* width: 30em; */
    /* height: 150px; */
    /* border: 1px solid blue; */
}

li.discussion__container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    /* border: 1px solid black; */
    /* background-color: orange; */
    border-bottom: 1px solid lightgrey;
    height: 100%;
    padding: 10px;
    /* border-radius: 10px; */
    margin: 1px;
}


li.discussion__container > div {
    display: flex;
    flex-direction: column;
    /* justify-content: flex-end; */
    /* border: 1px dotted red; */

}

.discussion__avatar--wrapper {
    flex-basis: 4em;
    flex-grow: 0.5;
    align-items: center;
}

.discussion__avatar--wrapper > img {
    width: 40px;
    height: 40px;
    border-radius: 50%;
}

.discussion__content{
    flex-basis: 15em;
    flex-grow: 5;
    align-items: flex-start;
    padding: 0 10px;
}

.discussion__content2{
    flex-basis: 20em;
    flex-grow: 5;
    align-items: flex-start;
    padding: 0 10px;
}

.discussion__title {
    padding: 10px 0;
    font-size: 1.1em;
}

.discussion__information {
    align-self: flex-end;
    font-size: 0.6em;
}


.discussion__answered {
    flex-direction: row;
    justify-content: center;
    align-items: center;
    flex-grow: 0.5;
}

.discussion__answered > p {
    display: flex;
}

.discussion__information2 {
    align-self: flex-end;
    font-size: 0.6em;
    padding-right: 5px;
    color: gray;
}

